--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "proxy": "http://localhost:3001",
